# text_embed_semantic_search

./: Text_embeddings_&_semantic_search.ipynb  pyproject.toml  pyproject.toml_copy
_dump/: notes_view_streamlit.py
_dump/.ipynb_checkpoints/: utils-checkpoint.py
notes/: 100-lessons-from-1-year-of-AI-research.md  200k_biohacking.md  48-laws-of-power.md  AI-team-revamp.md  UDE_RTU_equations.md  a-brief-introduction-to-causal-inference.md  a-programmers-guide-to-saving-investing-and-retiring-early.md  acme-rl-building-blocks.md  ai-canvas.md  annex81.md  architecture-patterns-with-python.md  articles.md  atomic-habits.md  attention.md  awk.md  aws-cli.md  bargaining-for-advantage.md  bash.md  bayesian_optimization.md  bbai_2022_wrappup.md  better-software-architecture-for-saas-startups.md  big_O.md  biohack_intelligence.md  biohacking_lite.md  bmi.md  brainbox.md  building_ai_trading_systems.md  building_mapping.md  bullshit-game.md  bullshit-jobs.md  business-model-generation.md  causality.md  civilized-mans-eight-deadly-sins.md  clearml-jupyter-lab.md  clearml.md  code_review.md  competitor_companies_to_bbai.md  containerization.md  conversation-with-cole.md  conversion-package.md  (+147 more)
